src/cli/renderer/snapshots/thndrs_core__renderer__region__tests__status_entry.snap
---
source: src/cli/renderer/region/tests.rs
assertion_line: 30
expression: contents
---
│                                                                                   # [bg=#171928]=                                                                                
│   Context                                                                         # [bg=#171928]=   [fg=#6473b7 bg=#171928 b]=Context [bg=#171928]=                                                                      [bg=#171928]=  
│   context AGENTS.md (scope: .)                                                    # [bg=#171928]=   [fg=#ebfafa bg=#171928]=context AGENTS.md (scope: .) [bg=#171928]=                                                 [bg=#171928]=
