src/cli/renderer/snapshots/thndrs_core__renderer__region__tests__streaming_tool_with_output.snap
---
source: src/cli/renderer/region/tests.rs
assertion_line: 30
expression: contents
---
│    |      search    native             attention                                  # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=     search    native           [fg=#abb4da bg=#171928]=    [fg=#ebfafa bg=#171928 b]=attention [bg=#171928]=                               [bg=#171928]=  
│    |                                      (none)                                  # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=                                [fg=#abb4da bg=#171928]=    [fg=#abb4da bg=#171928]=   (none) [bg=#171928]=                               [bg=#171928]=  
│    |   loaded                                                                     # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#ebfafa bg=#171928 b]=  loaded                        [fg=#abb4da bg=#171928]=    [bg=#171928]=                                        [bg=#171928]=  
│    |      (none)                                                                  # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=     (none)                     [fg=#abb4da bg=#171928]=    [bg=#171928]=                                        [bg=#171928]=  
│    + search                                                                       # [bg=#171928]=   [fg=#37f499 bg=#171928 b]= +  [fg=#ebfafa bg=#171928 b]=search [bg=#171928]=                                                                    [bg=#171928]=  
│    |    native: Umans server-side search; DuckDuckGo HTML fallback via            # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=   native: Umans server-side search; DuckDuckGo HTML fallback via [bg=#171928]=         [bg=#171928]=  
│    |    web_search tool; read_url fetches public HTTP(S) and extracts HTML        # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=   web_search tool; read_url fetches public HTTP(S) and extracts HTML [bg=#171928]=     [bg=#171928]=  
│    |    with Lectito                                                              # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=   with Lectito [bg=#171928]=                                                           [bg=#171928]=  
│    |                                                                              # [bg=#171928]=   [fg=#3b4261 bg=#171928]= | [bg=#171928]=                                                                           [bg=#171928]=  
│    + ready                                                                        # [bg=#171928]=   [fg=#37f499 bg=#171928 b]= +  [fg=#ebfafa bg=#171928 b]=ready [bg=#171928]=                                                                     [bg=#171928]=  
│    |   >      Ask for a change, run a command, or inspect this repo.              # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#37f499 bg=#171928 b]=  >       [fg=#abb4da bg=#171928]=Ask for a change, run a command, or inspect this repo. [bg=#171928]=           [bg=#171928]=  
│    |   ?      help                                                                # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#37f499 bg=#171928 b]=  ?       [fg=#abb4da bg=#171928]=help [bg=#171928]=                                                             [bg=#171928]=  
│    |   /model switch models                                                       # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#37f499 bg=#171928 b]=  /model  [fg=#abb4da bg=#171928]=switch models [bg=#171928]=                                                    [bg=#171928]=  
│                                                                                   # [bg=#171928]=                                                                                
│                                                                                   # [bg=#171928]=                                                                                
│   · run_shell [running]  program: cargo test                                      # [bg=#171928]=   [fg=#e0e0e0 bg=#171928]=·  [fg=#ebfafa bg=#171928 b]=run_shell [fg=#e0e0e0 bg=#171928]= [running] [bg=#171928]=   [fg=#abb4da bg=#171928]=program: cargo test [bg=#171928]=                                   [bg=#171928]=  
│      │ running 3 tests                                                            # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#8fa1b3 bg=#171928]=running [fg=#c0c5ce bg=#171928]= 3 tests [bg=#171928]=                                                         [bg=#171928]=  
│      │ test tests::foo ... ok                                                     # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#8fa1b3 bg=#171928]=test [fg=#c0c5ce bg=#171928]= tests::foo ... ok [bg=#171928]=                                                  [bg=#171928]=  
│      │ test tests::bar ... ok                                                     # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#8fa1b3 bg=#171928]=test [fg=#c0c5ce bg=#171928]= tests::bar ... ok [bg=#171928]=                                                  [bg=#171928]=  
│                                                                                   # [bg=#212337]=                                                                                
│    test-session  · idle                                                           # [bg=#212337]=   [bg=#212337]=  [fg=#37f499 bg=#212337 b]=test-session [bg=#212337]=   [fg=#3b4261 bg=#212337]=· idle [bg=#212337]=                                                        [bg=#212337]=  
│    ›                                                                              # [bg=#212337]=   [bg=#212337]=  [fg=#e0e0e0 bg=#212337]=› [bg=#212337]=   [bg=#212337]=                                                                         [bg=#212337]=  
│    model: test-model   search: native   tok: ↑0 ↓0   git: main clean              # [bg=#212337]=   [bg=#212337]=  [fg=#abb4da bg=#212337]=model: test-model [bg=#212337]=    [fg=#abb4da bg=#212337]=search: native [bg=#212337]=    [fg=#e0e0e0 bg=#212337]=tok: ↑0 ↓0 [bg=#212337]=    [fg=#37f499 bg=#212337]=git: main clean [bg=#212337]=           [bg=#212337]=  
│                                                                                   # [bg=#212337]=
